--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,20 @@
 * {
     font-family:sans-serif;
 }
+
+body, html {
+    height: 100%;
+    margin: 0;
+  }
+
+.tab-btn {
+background-color: #555;
+color: white;
+float: left;
+border: none;
+outline: none;
+cursor: pointer;
+padding: 14px 16px;
+font-size: 17px;
+width: 25%;
+}
