--- a/src/style.css
+++ b/src/style.css
@@ -3,18 +3,28 @@
 }
 
 body, html {
+    background-color: #f1d6cd;
     height: 100%;
     margin: 0;
   }
 
+#header {
+    height: fit-content;
+    
+}
+
+h2 {
+    text-align:center;
+}
+
 .tab-btn {
-background-color: #555;
-color: white;
-float: left;
+background-color: #EFBCAC;
+color: black;
 border: none;
 outline: none;
 cursor: pointer;
 padding: 14px 16px;
-font-size: 17px;
-width: 25%;
+font-size: 18px;
+width: 33.3%;
+margin-top: -5px;
 }
