--- a/src/style.css
+++ b/src/style.css
@@ -9,15 +9,12 @@ body, html {
     margin: 0;
   }
 
-/* h2 {
-    text-align:center;
-} */
 .bold {
     font-weight:bold;
 }
 
 .tab-btn {
-background-color: #EFBCAC;
+background-color:#f1c5b6;
 color: black;
 border: none;
 outline: none;
@@ -26,6 +23,10 @@ padding: 14px 16px;
 font-size: 18px;
 width: 33.3%;
 margin-top: -5px;
+}
+
+.tab-btn:hover {
+    background-color:azure
 }
 
 #header {
