Fix event listener to only fire on tab-btn click

--- a/src/style.css
+++ b/src/style.css
@@ -26,10 +26,8 @@ margin-top: -5px;
 }
 
 .tab-btn:hover {
-    background-color:azure
+    background-color:azure;
 }
-
-.tab-btn:
 
 #footer {
     position:absolute;
