--- a/src/style.css
+++ b/src/style.css
@@ -9,20 +9,45 @@ body, html {
     margin: 0;
   }
 
+span {
+    background-color: #C7E1FF;
+    white-space: pre;
+}
+
 .bold {
     font-weight:bold;
 }
 
+.menu-name {
+    text-align: left;
+}
+
+/* .menu-name:after {
+        content: '';
+        position: absolute;
+        bottom: .4rem;
+        width: 100%;
+        height: 0;
+        line-height: 0;
+        border-bottom: 2px dotted #ddd;
+      
+} */
+
+.menu-price {
+    /* background: #C7E1FF; */
+    text-align: right;
+}
+
 .tab-btn {
-background-color:#4CACFF;
-color: black;
-border: none;
-outline: none;
-cursor: pointer;
-padding: 14px 16px;
-font-size: 18px;
-width: 33.3%;
-margin-top: -5px;
+    background-color:#4CACFF;
+    color: black;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    font-size: 18px;
+    width: 33.3%;
+    margin-top: -5px;
 }
 
 .tab-btn:hover {
@@ -49,7 +74,34 @@ margin-top: -5px;
     display:grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: auto;
+    margin: auto;
+    width: 350px;
+    overflow: hidden;
+    white-space: nowrap;
+
+text-decoration:solid;
+    /* text-overflow: ellipsis; */
 }
+
+/* .leaders {
+    max-width: 80em;
+    padding: 0;
+    overflow: hidden;
+} */
+.leaders:after {
+    left: 50px;
+    width: 0;
+    white-space: nowrap pre;
+    content:
+ " . . . . . . . . . . . . . . . . . . . . . . . ."}
+
+/* .leaders span {
+    padding-right: 0.33em;
+    background: white}
+.leaders span + span {
+    float: right;
+    padding-left: 0.33em;
+    background: white} */
 
 #contact-info {
     display:grid;
