--- a/src/style.css
+++ b/src/style.css
@@ -66,7 +66,7 @@ span {
     margin:auto;
     width: 500px;
 }
-#menu-list {
+.menu {
     row-gap: 10px;
     display:grid;
     grid-template-columns: 50% 50%;
