--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,9 @@ body, html {
     margin: 0;
   }
 
+h3 {
+    margin-bottom: 10px;
+}
 
 span {
     background-color: #C7E1FF;
@@ -73,6 +76,7 @@ span {
     grid-template-columns: 50% 50%;
     grid-template-rows: auto;
     margin: auto;
+    margin-bottom: 30px;
     overflow: hidden;
     text-decoration:solid;
     white-space: nowrap;
