--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,10 @@
 }
 
 body, html {
-    background-color: #C7E1FF;
+    /* background-color: #C7E1FF; */
+    /* background: rgb(199,225,255); */
+
+
     height: 100%;
     margin: 0;
   }
@@ -24,7 +27,8 @@ h3 {
     font-family: 'FrescaReg';
     font-size: 24px;
     margin-bottom: 5px;
-    margin-top:10px;
+    margin-top: 0px;
+    padding-top:10px;
 }
 
 span {
@@ -34,6 +38,10 @@ span {
 
 .bold {
     font-weight:bold;
+}
+
+.hidden {
+    display: none;
 }
 
 .menu {
@@ -69,7 +77,8 @@ span {
 }
 
 .tab-btn {
-    background-color:#4CACFF;
+    background-color:#85c3fa;
+    /* background: linear-gradient(0deg, rgba(199,225,255,1) 20%, rgba(133,195,250,1) 34%); */
     color: black;
     border: none;
     outline: none;
@@ -81,12 +90,23 @@ span {
 }
 
 .tab-btn:hover {
-    background-color:azure;
+    /* background-color:azure; */
+    font-weight: bold;
+
 }
 
 .selected-tab {
-    background-color: #C7E1FF;
+    background-color: #85c3fa;
+    background-image: url(tab_cloud.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size:contain;
     font-weight:bold;
+}
+
+#content {
+    background: linear-gradient(0deg, rgba(199,225,255,1) 95%, rgba(133,195,250,1) 100%);
+    height: 100%;
 }
 
 #footer {
@@ -97,14 +117,17 @@ span {
 
 #intro {
     margin:auto;
+    margin-top: 0px;
+    padding-top: 25px;
     width: 500px;
 }
 
 #subtitle {
     font-family: 'FrescaReg';
     font-size: 40px;
-    margin-top: 5%;
+    margin-top:0;
     margin-bottom:2%;
+    padding-top: 5%;
 }
 
 #contact-info {
