--- a/src/style.css
+++ b/src/style.css
@@ -122,7 +122,6 @@ span {
 #intro {
     margin:auto;
     margin-top: 0px;
-    padding-top: 25px;
     width: 500px;
 }
 
@@ -130,8 +129,8 @@ span {
     font-family: 'FrescaReg';
     font-size: 40px;
     margin-top:0;
-    margin-bottom:2%;
-    padding-top: 5%;
+    margin-bottom: 10px;
+    padding-top: 20px;
 }
 
 #contact-info {
