--- a/src/style.css
+++ b/src/style.css
@@ -110,7 +110,10 @@ span {
 }
 
 #full-menu {
+    left: 0;
+    right: 0;
     padding-top: 20px;
+    position:absolute;
 }
 
 #footer {
@@ -152,6 +155,7 @@ span {
             font-size: 48px;
         }
         h3 {
+            font-size: 56px;
             margin-bottom: 40px;
         }
         .menu, #intro, #contact-info {
@@ -162,9 +166,13 @@ span {
         .menu-name {
             font-size: 56px;
         }
+        #full-menu {
+            padding-top: 100px;
+        }
         #subtitle {
-            font-size:60px;
-            margin-top: 75px;
+            font-size:74px;
+            margin-bottom: 40px;
+            padding-top: 200px;
         }
     } 
 @media only screen 
