--- a/src/style.css
+++ b/src/style.css
@@ -37,9 +37,12 @@ span {
     display: none;
 }
 .intro {
-    margin:auto;
+    border-left: solid #85c3fa;
+    margin: auto;
     margin-top: 0px;
-    padding-bottom: 30px;
+    /* padding-bottom: 30px; */
+    padding-left: 8px;
+    /* padding-top: 18px; */
     text-align: left;
     width: 50%;
 }
@@ -117,6 +120,9 @@ span {
     padding-top: 20px;
     position:absolute;
     right: 0;
+}
+#intro {
+    padding-bottom: 18px;
 }
 #subtitle {
     font-family: 'FrescaReg';
