--- a/src/style.css
+++ b/src/style.css
@@ -70,7 +70,7 @@ span {
     width: 350px;
 }
 .menu-name {
-    font-family: 'FrescaReg'; 
+    font-family: 'Mada', Helvetica, Arial, sans-serif; 
     text-align: left;
 }
 .menu-name:after {
