--- a/src/style.css
+++ b/src/style.css
@@ -169,12 +169,18 @@ span {
         }
         .intro {
             font-size: 50px;
-            /* margin: 0; */
             text-align:center;
             width: 70%;
         }
+        .tab-btn {
+            font-size: 48px;
+            margin-top: -40px;
+        }
         #full-menu {
             padding-top: 70px;
+        }
+        #logo {
+            width: 980px;
         }
         #subtitle {
             font-size:74px;
@@ -206,20 +212,22 @@ span {
         }
         .tab-btn {
             font-size: 16px;
+            margin-top: -10px;
         }
 
         #contact-info {
             font-size: 20px;
             width: 350px;
         }
-        #intro{
-            font-size: 20px;
-            width: 500px;
+        .intro{
+            font-size: 16px;
+            width: 350px;
         }
         #subtitle {
-            font-size:30px;
+            font-size:20px;
             margin: 0px;
             margin-bottom: 5px;
-            margin-top: 10px;
+            margin-top: 0px;
+            padding-top: 30px;
         }
     } 
