--- a/src/style.css
+++ b/src/style.css
@@ -86,6 +86,7 @@ span {
     background-color:#85c3fa;
     color: black;
     border: none;
+    border-top: solid lightslategray 15px;
     outline: none;
     cursor: pointer;
     padding: 14px 14px;
