--- a/src/style.css
+++ b/src/style.css
@@ -145,8 +145,8 @@ span {
 }
 
 @media only screen 
-  and (min-device-width: 320px) 
-  and (max-device-width: 812px) 
+  /* and (min-device-width: 320px) 
+  and (max-device-width: 812px)  */
   and (orientation: portrait)
     {  
         * {
