--- a/src/style.css
+++ b/src/style.css
@@ -247,41 +247,40 @@ span {
     @media only screen 
     and (min-device-width: 2000px) 
     and (orientation: landscape) {  
+        * {
+            font-size: 45px;
+        }
         h3 {
-            font-size: 18px;
-            position:absolute;
-            left: 300px;
-            margin: 0px;
+            font-size: 45px;
+        }
+        .contact-method {
+            font-size: 50px;
         }
         .intro{
             font-size: 45px;
-            width: 70%;
+            padding-right: 40px;
+            width: 40%;
         }
         .menu {
-            font-size: 18px;
+            font-size: 45px;
             margin-bottom: 5px;
             row-gap: 0px;
-            width: 250px;
-        }
-        .menu-name {
-            font-size: 18px;
-            margin-bottom: 5px;
-            margin-top: 5px;
+            width: 30%;
         }
         .tab-btn {
-            font-size: 16px;
-            margin-top: -10px;
+            font-size: 45px;
+            margin-top: -20px;
         }
         #contact-info {
-            font-size: 20px;
-            width: 350px;
+            font-size: 50px;
+            width: 25%;
         }
         #subtitle {
-            font-size:20px;
+            font-size:50px;
             margin: 0px;
             margin-bottom: 5px;
             margin-top: 0px;
-            padding-top: 30px;
+            padding-top: 70px;
         }
     } 
 
