--- a/src/style.css
+++ b/src/style.css
@@ -83,13 +83,14 @@ span {
 }
 .tab-btn {
     background-color:#85c3fa;
-    color: black;
     border: none;
     border-top: solid lightslategray 15px;
-    outline: none;
+    color: black;
     cursor: pointer;
-    padding: 14px 0px 16px 0px;
     font-size: 18px;
+    margin-top: -6px;
+    outline: none;
+    padding: 14px 0px 16px 0px;
     width: 33.3333%;
 }
 .tab-btn:hover {
@@ -131,6 +132,7 @@ span {
     position:absolute;
     right: 0;
 }
+
 #intro {
     padding-bottom: 18px;
 }
@@ -176,6 +178,12 @@ span {
             font-size: 56px;
             row-gap: 16px;
             width: 700px;
+        }
+        .menu-title {
+            font-size: 52px;
+        }
+        .menu-name, .menu-price {
+            font-size: 46px;
         }
         .tab-btn {
             font-size: 48px;
